# MagnetoPyElastica

./: .coveragerc  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  publish-to-pypi.yml
examples/: README.md  post_processing.py
examples/ConstantMagneticField/: magnetic_beam_case.py  magnetic_beam_phase_space_validation.py
examples/Magnetic2DCiliaCarpet/: magnetic_cilia_carpet_rotating_field.py
examples/MagneticMiliPedeGrid/: connect_perpendicular_rods.py  interaction_plane_for_rod_tips.py  magnetic_decapot_grid.py
examples/RotatingMagneticField/: magnetic_beam_rotating_magnetic_field.py  post_processing.py
magneto_pyelastica/: __init__.py  magnetic_field.py  magnetic_forces.py  utils.py
tests/: test_magnetic_field.py  test_magnetic_forces.py  test_utils.py
